Sliding navigation menu for mobile devices

--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/CSS/Style.css" />
+    <link rel="stylesheet" href="/CSS/Queries.css" />
     <title>Aroma Kitchen</title>
   </head>
 
   <body>
     <div class="page-warper">
-      <header>
+      <header class="header">
         <nav class="nav">
           <img src="/img/aroma_kitchen.png" alt="logo" class="logo" />
           <svg class="menu-icon">
             <use xlink:href="/img/icons.svg#menu"></use>
           </svg>
-
+          <svg class="close-icon">
+            <use xlink:href="/img/icons.svg#close"></use>
+          </svg>
           <div class="nav-bar">
             <ul class="nav-items">
               <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
